src/objects/INT_Orden_Trabajo__c.object
<CustomObject>
    <description>Contiene información de las órdenes de trabajo asociadas a los movimientos que se envían a las aseguradoras</description>
    <fields>
        <fullName>IOT_DAT_Fecha_Cierre_servicio__c</fullName>
        <label>Fecha de  cierre de servicio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IOT_DAT_Fecha_Creacion_Asistencia__c</fullName>
        <label>Fecha Creación de la asistencia</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IOT_DAT_Fecha_Primera_Cita__c</fullName>
        <label>Fecha de apertura del servicio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IOT_DIV_Importe_Valoracion__c</fullName>
        <label>Total importe valoracion sin IVA</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IOT_LKP_Movimiento_CIA__c</fullName>
        <description>Relación con el objeto Integraciones: Movimiento CIA, movimiento que se envía a la aseguradora.</description>
        <label>Movimiento CIA</label>
        <referenceTo>INT_Movimiento_CIA__c</referenceTo>
        <relationshipLabel>Integraciones: Servicios</relationshipLabel>
        <relationshipName>Integraciones_Ordenes_Trabajo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Agente_Anula_Asistencia__c</fullName>
        <label>Código Agente que ha anulado el servicio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Agente_Crea_Asistencia__c</fullName>
        <label>Código Agente que creó la Asistencia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Canal__c</fullName>
        <label>Código canal de entrada</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Codigo_Asistencia__c</fullName>
        <label>Código de la asistencia</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Codigo_Profesional__c</fullName>
        <label>Código profesional</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_DT__c</fullName>
        <label>DT laboral del profesional</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Descripcion_Canal__c</fullName>
        <label>Descripción corta de entrada</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Estado__c</fullName>
        <label>Último estado del servicio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Gremio_Desc__c</fullName>
        <label>Descripción del gremio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Gremio__c</fullName>
        <label>Código</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Modo_de_pago__c</fullName>
        <label>Forma de pago del cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Motivo_Anulacion__c</fullName>
        <description>Motivo de anulación. Reflejo del respectivo campo en el objeto Órdenes de Trabajo para el envío de movimientos.</description>
        <label>Motivo Anulación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Num_OrdenTrabajo_HS__c</fullName>
        <description>Campo copia para el envío de movimientos por ficheros</description>
        <label>Nº de Servicio HS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Presupuesto__c</fullName>
        <description>Indica si tiene presupuesto</description>
        <label>Presupuesto</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOT_TXT_Urgente__c</fullName>
        <description>Indica si la Orden de Trabajo es urgente</description>
        <label>Urgente</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Integraciones: Servicio</label>
    <nameField>
        <label>Identificador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integraciones: Servicios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>